--- a/src/app/delete/delete.component.html
+++ b/src/app/delete/delete.component.html
@@ -7,5 +7,7 @@
   <div mat-dialog-actions>
     <button mat-button [mat-dialog-close]="1" (click)="confirmDelete($event)">Delete</button>
     <button mat-button (click)="onNoClick()" >Cancel</button>
+    <!-- <button mat-button mat-dialog-close>Cancel</button> -->
+    <!-- <button mat-raised-button color="primary" (click)="dialogRef.close()">Close</button> -->
   </div>
 </div>
