--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,7 +23,7 @@
       </mat-form-field>
     </div>
 
-    <button mat-raised-button color="primary" type="submit">Login</button>
+    <button mat-raised-button color="primary" [disabled]="!Form.valid" type="submit">Login</button>
   </form>
   </mat-card>
 </body>
