--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,8 @@
     <button routerLink="/contact" mat-raised-button color="primary">Contact Us</button>
     <button routerLink="/userlist" mat-raised-button color="primary">UserList</button>
     <button routerLink="/about" mat-raised-button color="primary">About Us</button>
-    <!-- <a routerLink="/about" routerLinkActive="active">about us</a> -->
-
   </mat-toolbar>
-
 </body>
-<div class="footer">This footer will always be positioned at the bottom of the page, but
-  <strong>not fixed</strong>.</div>
+<div class="footer">Infiniy Labs Software Services
+  <strong>CISCO Ltd.</strong>.</div>
 <router-outlet></router-outlet>
